changing logic, i dont know if its ok but its the last comit

--- a/public/templates/components/auth/login_form.twig
+++ b/public/templates/components/auth/login_form.twig
@@ -87,7 +87,7 @@
                 </div>
                 {% endif %}
 
-                <form id="loginForm" onsubmit="return handleLogin(event)" data-aos="fade-up" data-aos-delay="200">
+                <form id="loginForm" action="/login" method="POST" data-aos="fade-up" data-aos-delay="200">
                     <div class="mb-4">
                         <label for="username" class="form-label"><i class="fas fa-user me-2"></i> {{ _('Usuario') }}</label>
                         <input type="text" class="form-control form-control-lg" id="username" name="username" required placeholder="{{ _('Introduce tu nombre de usuario') }}">
