fix some routes, fix some auth settings and add admin panel

--- a/public/templates/components/admin/admin_panel.twig
+++ b/public/templates/components/admin/admin_panel.twig
@@ -16,7 +16,7 @@
     <!-- Font Awesome para iconos -->
     <link rel="stylesheet" href="/assets/lib/fontawesome/fontawesome-free-6.4.0-web/css/all.min.css">
     <!-- Animate.css para animaciones -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="/assets/lib/animate.css/animate.min.css">
     <!-- AOS para efectos de scroll -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Chart.js para gráficos -->
